@@ -282,6 +282,7 @@ https://github.com/elastic/beats/compare/v5.0.2...v5.1.1[View commits]
 
 - Add add_cloud_metadata processor for collecting cloud provider metadata. {pull}2728[2728]
 - Added decode_json_fields processor for decoding fields containing JSON strings. {pull}2605[2605]
+- Add Tencent Cloud provider for add_cloud_metadata processor. {pull}4023[4023]
 
 *Metricbeat*
 
